# SiteAble

./: .dockerignore  .env.example  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  siteable.example.yaml
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md
src/ai/accessibility/: __init__.py  __version__.py  analyzer.py  analyzer_plugin.py  auto_scanner.py  cli.py  fixes.py  utils.py
src/analyzers/: __init__.py  plugins.py
src/api/: api.py  auth.py
src/api/routes/: dashboard.py  scan.py
src/core/: analyzer.py  config.py  logging.py  severity.py  storage.py
src/crawler/: crawler_scanner.py  rate_limiter.py
src/reporting/: __init__.py  html_report.py
tests/: test_accessibility_analyzer.py  test_analyzers_plugins.py  test_api.py  test_crawler.py  test_fixes.py  test_html_report.py  test_new_analyzers.py  test_rate_limiter.py  test_severity.py
